Wk11 ex 1 and 2 complted

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <label for="user-name">Enter name:</label>
     <input type="text" id="user-name" placeholder="Your name?">
     <input type="submit">
+	<button id="ClrButton" >Clear All !</button> 
   </form>
 
   <script src="js/localstore.js"></script>
